refactor: update scripts